[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/components/Player.gd" type="Script" id=1]

[node name="Player" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
visible = false
margin_left = 566.0
margin_top = 328.0
margin_right = 700.0
margin_bottom = 378.0

[node name="PlayerLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_right = 134.0
margin_bottom = 14.0
text = "Player"
align = 1

[node name="ScoreLabelCurr" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 134.0
margin_bottom = 32.0
text = "Current Round Score:"
align = 1

[node name="TotalLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 134.0
margin_bottom = 50.0
text = "Total Score"
align = 1

[node name="InfoLabel" type="Label" parent="PanelContainer/CenterContainer"]
margin_left = 633.0
margin_top = 346.0
margin_right = 633.0
margin_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
